# TableTennis-HawkEye

./: .gitignore  README.md  pyproject.toml
src/: action.py  api.py  app.py  backend.py  ball_detector.py  ball_tracker.py  inference.py  landing_detector.py  speed_estimator.py  table_calibration.py
src/assets/: app.icns
src/backend/: backend.py  tauri.conf.json
src/backend/capabilities/: default.json
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: MainWorkspace.tsx  NavigationBar.tsx  Sidebar.tsx  language.d.ts  language.js  main.tsx  styles.css  types.ts
src/ui/: main_window.py  sidebar.py
