[project]
name = "TableTennis-HawkEye"
version = "0.1.0"
description = "Table tennis Hawk-Eye desktop app with YOLO Pose action recognition."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
dependencies = [
    "numpy>=1.24,<2.0",
    "opencv-python>=4.10.0.84",
    "PySide6>=6.7.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.4.0",
]

[project.scripts]
TableTennis-HawkEye = "app:main"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi-tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
torch = { index = "pypi-tuna" }
torchvision = { index = "pypi-tuna" }
